fix chapa session
